# vimiv

./: .gitignore  LICENSE  Makefile  setup.cfg  setup.py  vimiv.desktop
aur/: PKGBUILD
vimiv/: __init__.py  __main__.py  image.py  settings.py
