[metadata]

name = vimiv
version = attr: vimiv.__version__
description = An image viewer with vim-like keybindings
author = Théo Cavignac
author_email = theo.cavignac+dev@gmail.com
url = https://github.com/Lattay/vimiv
long_description = file: readme.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Environment :: GUI

[options]
packages = find:

install_requires =
    PyGObject

[options.entry_points]

gui_scripts =
    vimiv=vimiv.__main__:main

[mypy]

show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True
color_output = True
